# module-specifier-resolver

./: .gitignore  Cargo.toml  README.md  bin.ts  deno.jsonc  mod.ts
.github/workflows/: ci.yaml  create-asset.yml  publish.yaml
examples/repo/: package-lock.json  package.json  tsconfig.json
examples/repo/src/: App.tsx  ComponentC.tsx  ComponentD.tsx  ComponentE.tsx  app.tsx  awesome-module.js  sideEffect.ts  style.css
examples/repo/src/ComponentA/: ComponentA.tsx  index.ts
examples/repo/src/ComponentB/: index.tsx
examples/repo/src/Main/: App.tsx
examples/repo/src/alias/: cool.ts
src/: bin.ts  bin_internal.ts  deps.ts  dev_deps.ts  main.rs  mod.ts  mod_test.ts  path.ts  path_test.ts  resolve_util.ts  resolve_util_test.ts  str.ts  str_test.ts  transform.ts  transform_test.ts
src/tests/fixture/: mod.ts
