[package]
name = "ntd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.29.27", features=["tty-emitter"] }
swc_ecma_parser = { version = "0.124.2", features=["typescript"] }
